add tasks module
