# src/app.js
@@ -2,6 +2,7 @@ import express from 'express';
 import morgan from 'morgan';
 import usersRoutes from './routes/users.route.js';
 import authRoutes from './routes/auth.route.js';
+import tasksRoutes from './routes/tasks.route.js';
 
 const app = express();
 
@@ -14,5 +15,6 @@ app.get('/', (req, res) => {
 
 app.use('/api/users', usersRoutes);
 app.use('/api/login', authRoutes);
+app.use('/api/tasks', tasksRoutes);
 
 export default app;
